[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cardano-clusterlib"
authors = [
    {name = "Martin Kourim", email = "martin.kourim@iohk.io"},
]
description = "Python wrapper for cardano-cli for working with cardano cluster"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cardano", "cardano-node", "cardano-cli", "cardano-node-tests"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.urls]
homepage = "https://github.com/input-output-hk/cardano-clusterlib-py"
documentation = "https://cardano-clusterlib-py.readthedocs.io/"
repository = "https://github.com/input-output-hk/cardano-clusterlib-py"

[tool.black]
line-length = 100

[tool.isort]
force_single_line = true

[tool.ruff]
line-length = 100
select = ["ARG", "B", "C4", "C90", "D", "E", "F", "ISC", "N", "PT", "Q", "SIM", "W", "PTH", "PLC", "PLE", "PLR", "PLW", "RUF", "U"]
ignore = ["PT001", "PT004", "PT007", "PT012", "PT018", "PT023", "D10", "D203", "D212", "D213", "D214", "D215", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D413", "PLR0912", "PLR0913", "PLR0915", "UP035", "UP006", "UP007", "PTH123"]
