[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cardano-clusterlib"
authors = [
    {name = "Martin Kourim", email = "martin.kourim@iohk.io"},
]
description = "Python wrapper for cardano-cli for working with cardano cluster"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cardano", "cardano-node", "cardano-cli", "cardano-node-tests"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
]
dynamic = ["version"]
dependencies = [
    "packaging",
]

[tool.setuptools_scm]

[project.urls]
homepage = "https://github.com/input-output-hk/cardano-clusterlib-py"
documentation = "https://cardano-clusterlib-py.readthedocs.io/"
repository = "https://github.com/input-output-hk/cardano-clusterlib-py"

[tool.black]
line-length = 100

[tool.isort]
force_single_line = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ARG", "B", "C4", "C90", "D", "DTZ", "E", "EM", "F", "I001", "ISC", "N", "PIE", "PL", "PLE", "PLR", "PLW", "PT", "PTH", "Q", "RET", "RSE", "RUF", "SIM", "TRY", "UP", "W", "YTT"]
ignore = ["D10", "D203", "D212", "D213", "D214", "D215", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D413", "ISC001", "PLR0912", "PLR0913", "PLR0915", "PT001", "PT004", "PT007", "PT012", "PT018", "PT023", "PTH123", "RET504", "TRY002", "TRY301", "UP006", "UP007", "UP035"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
show_error_context = true
verbosity = 0
ignore_missing_imports = true
follow_imports = "normal"
no_implicit_optional = true
allow_untyped_globals = false
allow_untyped_defs = false
warn_unused_configs = true
warn_return_any = true
