[flake8]
ignore = E128,E811,W503,E203
max_line_length = 100

[pydocstyle]
inherit = false
# google convention + D413
ignore = D10,D203,D212,D213,D214,D215,D404,D405,D406,D407,D408,D409,D410,D411,D413
match = .*\.py

[metadata]
name = cardano-clusterlib
url = https://github.com/input-output-hk/cardano-clusterlib-py
maintainer = Martin Kourim
maintainer_email = martin.kourim@iohk.io
description = Python wrapper for cardano-cli for working with cardano cluster
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires=setuptools_scm
install_requires =
    setuptools>=21.0.0
