[metadata]
name = cardano-clusterlib
url = https://github.com/input-output-hk/cardano-clusterlib-py
maintainer = Martin Kourim
maintainer_email = martin.kourim@iohk.io
description = Python wrapper for cardano-cli for working with cardano cluster
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    setuptools >= 45
