[metadata]
name = cardano-clusterlib
url = https://github.com/input-output-hk/cardano-clusterlib-py
author = Martin Kourim
author_email = martin.kourim@iohk.io

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    setuptools >= 45
